added in branding

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -20,15 +20,12 @@
 
 body {
   margin: 0;
-  display: flex;
-  flex-direction: column;
-  min-width: 320px;
-  min-height: 100vh;
   font-family: var(--font-family);
   line-height: var(--line-height);
   font-weight: var(--font-weight);
   color: var(--color-dark);
   background-color: var(--background-dark);
+  overflow-x: hidden;
 }
 
 a {
@@ -46,7 +43,9 @@ h1 {
 }
 
 #app {
-
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
 
 button {
@@ -72,25 +71,31 @@ button:focus-visible {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 100vw;
+  height: 60px;
+  width: 100%;
   position: fixed;
-  z-index: 1;
-  background-color: white;
+  top: 0;
+  left: 0;
+  z-index: 1000;
+  background-color: var(--background-light);
+  padding: 1em;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  box-sizing: border-box;
+}
+
+.header .nav {
+  display: flex;
+  align-items: center;
+  gap: 20px;
 }
 
 .logo img {
   max-width: 100px;
 }
 
-.nav {
-  display: flex;
-  align-items: center;
-  gap: 20px;
-}
-
 .nav a {
   text-decoration: none;
-  color: black;
+  color: var(--color-light);
   font-weight: bold;
 }
 
@@ -100,8 +105,7 @@ button:focus-visible {
   border: none;
   cursor: pointer;
   border-radius: 5px;
-  font-weight: bold;
-
+  padding: 0.5em 1em;
 }
 
 .nav .quote-button:hover {
@@ -109,15 +113,17 @@ button:focus-visible {
 }
 
 .hero {
-  position: relative;
   width: 100%;
   height: 100vh;
-  background: url('src/assets/hero-image.jpeg') no-repeat center center;
+  background: url('src/assets/jcs2.jpeg') no-repeat center center;
   background-size: cover;
   display: flex;
   align-items: center;
   justify-content: flex-start;
   color: white;
+  padding: 2em;
+  margin-top: 60px; /* Adjust based on the height of your header */
+  box-sizing: border-box; /* Ensure padding and borders are included in the element's total width and height */
 }
 
 .hero-content {
@@ -125,12 +131,28 @@ button:focus-visible {
 }
 
 .hero h1 {
-  font-size: 1.5em;
+  font-size: 3em;
   margin: 0;
 }
 
 .hero p {
   font-size: 1.5em;
+}
+
+.about {
+  padding: 2em;
+  background-color: var(--background-light);
+  color: var(--color-light);
+  box-sizing: border-box;
+}
+
+.about h2 {
+  font-size: 2.5em;
+  margin-bottom: 1em;
+}
+
+.about p {
+  font-size: 1.2em;
 }
 
 @media (prefers-color-scheme: light) {
