--- a/src/components/header.html
+++ b/src/components/header.html
@@ -6,7 +6,7 @@
       <nav class="nav">
         <a href="#home">Home</a>
         <a href="#about">About</a>
-        <a href="#work">Our Work</a>
+        <a href="#projects">Our Work</a>
         <a href="#contact">Contact</a>
         <button class="quote-button">Get Quote</button>
       </nav>
