Made adjustments to the hero

--- a/src/components/about.html
+++ b/src/components/about.html
@@ -2,6 +2,9 @@
     <section class="about" id="about">
       <div class="about-content">
         <h2>ABOUT US</h2>
+        <h3>JCS Homes LLC</h3>
+        <h4>PICKING THE RIGHT BUILDER</h4>
+        <p>JCS Homes is family-owned and operated custom home builder and home remodeling company located in Northern Virginia. We have been serving the DMV community for over 20 years, and we are committed to building high quality homes that meet the wants and desires of our clientel.</p>
         <p>At Affordable Remodeling, we take care of all your home improvement needs. Drywall, Painting, Flooring, and more. We take your ideas and make them our next project.</p>
         <p>Our team of professionals are here to help you with your next project. We are dedicated to providing you with the best service and quality work.</p>
         <button class="quote-button">Test</button>
