--- a/src/components/header.html
+++ b/src/components/header.html
@@ -4,11 +4,10 @@
         <img src="src/assets/logo.webp" alt="Logo">
       </div>
       <nav class="nav">
-        <a href="#home">Home</a>
-        <a href="#about">About</a>
-        <a href="#projects">Our Work</a>
-        <a href="#contact">Contact</a>
-        <button class="quote-button">Get Quote</button>
+        <a href="#home">PROJECTS</a>
+        <a href="#about">REMODELS</a>
+        <a href="#projects">ABOUT</a>
+        <button class="quote-button">CONTACT</button>
       </nav>
     </header>
   </template>
