--- a/src/components/hero.html
+++ b/src/components/hero.html
@@ -1,9 +1,8 @@
 <template id="hero-template">
     <section class="hero">
       <div class="hero-content">
-        <h1>AFFORDABLE REMODELING</h1>
-        <p>We take care of all your home improvement needs. Drywall, Painting, Flooring, and more.</p></p>
-        <p>See how we can take your ideas and make them our next project.</p>
+        <h1>YOUR HOME.</h1>
+        <h1>YOUR WAY.</h1>
         <button class="quote-button">Get Quote</button>
       </div>
     </section>
