--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -30,6 +30,7 @@ body {
 
 a {
   font-weight: 500;
+  font-size: larger;
   color: var(--link-color);
   text-decoration: inherit;
 }
@@ -77,9 +78,8 @@ button:focus-visible {
   top: 0;
   left: 0;
   z-index: 1000;
-  background-color: var(--background-light);
+  background-color: transparent;
   padding: 1em;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   box-sizing: border-box;
 }
 
@@ -87,10 +87,13 @@ button:focus-visible {
   display: flex;
   align-items: center;
   gap: 20px;
+  margin-top: 50px; /* Add this line */
 }
 
 .logo img {
-  max-width: 100px;
+  max-width: 180px;
+  padding: 10px;
+  margin-top: 50px; /* Add this line */
 }
 
 .nav a {
@@ -100,12 +103,22 @@ button:focus-visible {
 }
 
 .nav .quote-button {
-  background-color: #007bff;
-  color: white;
-  border: none;
+  background-color: transparent;
+  color: black;
+  border: 2px solid black;
   cursor: pointer;
-  border-radius: 5px;
+  border-radius: 0cap;
   padding: 0.5em 1em;
+}
+
+.hero .quote-button {
+  background-color: transparent;
+  color: black;
+  border: 2px solid black;
+  cursor: pointer;
+  border-radius: 0cap;
+  padding: 0.5em 1em;
+  margin: 45px;
 }
 
 .nav .quote-button:hover {
@@ -115,23 +128,35 @@ button:focus-visible {
 .hero {
   width: 100%;
   height: 100vh;
-  background: url('src/assets/jcs2.jpeg') no-repeat center center;
+  background: url('src/assets/hero.webp') no-repeat center center;
   background-size: cover;
   display: flex;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: center;
   color: white;
   padding: 2em;
-  margin-top: 60px; /* Adjust based on the height of your header */
-  box-sizing: border-box; /* Ensure padding and borders are included in the element's total width and height */
+  box-sizing: border-box;
+}
+
+.hero::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 50%;
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.6), transparent);
+  z-index: 1;
 }
 
 .hero-content {
-  max-width: 500px;
+  max-width: 1000px;
+  text-align: center;
+  z-index: 2;
 }
 
 .hero h1 {
-  font-size: 3em;
+  font-size: 10em;
   margin: 0;
 }
 
@@ -144,6 +169,7 @@ button:focus-visible {
   background-color: var(--background-light);
   color: var(--color-light);
   box-sizing: border-box;
+  text-align: center;
 }
 
 .about h2 {
