--- a/public/components/whyus.html
+++ b/public/components/whyus.html
@@ -8,7 +8,7 @@
         </div>
         <div class="image-box">
           <div class="image-container">
-            <img src="/src/assets/b1.jpeg" alt="Description of image">
+            <img src="/assets/b1.jpeg" alt="Description of image">
           </div>
         </div>
       </div>
