--- a/public/components/header.html
+++ b/public/components/header.html
@@ -1,7 +1,7 @@
 <template id="header-template">
     <header class="header">
       <div class="logo">
-        <img src="src/assets/logo.webp" alt="Logo">
+        <img src="/assets/logo.webp" alt="Logo">
       </div>
       <nav class="nav">
         <a href="#home">PROJECTS</a>
