--- a/public/styles/hero.css
+++ b/public/styles/hero.css
@@ -1,7 +1,7 @@
 .hero {
     width: 100%;
     height: 100vh;
-    background: url('src/assets/hero.webp') no-repeat center center;
+    background: url('/assets/hero.webp') no-repeat center center;
     background-size: cover;
     display: flex;
     align-items: center;
