--- a/public/components/whyus.html
+++ b/public/components/whyus.html
@@ -13,5 +13,28 @@
         </div>
       </div>
     </div>
+    <div class="content-box-container">
+      <section class="licbox">
+        <div class="image-box">
+          <div class="lic-image-container">
+            <img src="/assets/ntca.png" alt="Description of image">
+          </div>
+        </div>
+      </section>
+      <section class="licbox">
+        <div class="image-box">
+          <div class="lic-image-container">
+            <img src="/assets/leadsafe.png" alt="Description of image">
+          </div>
+        </div>
+      </section>
+      <section class="licbox">
+        <div class="image-box">
+          <div class="lic-image-container">
+            <img src="/assets/b2.jpeg" alt="Description of image">
+          </div>
+        </div>
+      </section>
+    </div>
   </section>
 </template>
