--- a/public/styles/whyus.css
+++ b/public/styles/whyus.css
@@ -1,12 +1,12 @@
 .whyus {
-  height: 100vh;
+  height: auto; /* Change this from 100vh to auto */
   display: flex;
   justify-content: flex-start;
-  align-items: center;
+  flex-direction: column;
 }
 
 .whyus-content {
-  width: 90%;
+  width: 97%;
 }
 
 .content-box {
@@ -15,7 +15,24 @@
   background-color: #F5F1F3;
   padding: 20px;
   box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.1);
-  height: 80vh;
+  height: auto; 
+  width: 97%;
+}
+
+.licbox {
+  display: flex;
+  justify-content: space-between;
+  background-color: #F5F1F3;
+  padding: 20px;
+  box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.1);
+  height: auto; 
+  width:20%;
+  margin-top: 20px;
+}
+.content-box-container {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap; /* Add this if you want the sections to wrap to the next line when the width is not enough */
 }
 
 .text-content, .image-box {
@@ -43,8 +60,18 @@ p {
   padding: 20px;
 }
 
+.lic-image-container {
+  padding: 20px;
+}
+
 .image-container img {
   width: 100%;
   height: auto;
   max-width: 300px;
+}
+
+.lic-image-container img {
+  width: 100%;
+  height: auto;
+  max-width: 200px;
 }
