adjustments to views

--- a/public/components/hero.html
+++ b/public/components/hero.html
@@ -8,7 +8,7 @@
     </section>
       <section class="pitch">
         <div class="pitch-content">
-          <h1 class="pitch-text">Turn your home into your dream home</h1>
+          <h1 class="pitch-text">Turn your house into your dream home</h1>
           <div class="line"></div>
           <p class="pitch-paragraph">JCS Homes is family-owned and operated custom home builder and home remodeling company located in Northern Virginia. We have been serving the DMV community for over 20 years, and we are committed to building high quality homes that meet the wants and desires of our clientel.</p>
         </div>
