--- a/public/components/whyus.html
+++ b/public/components/whyus.html
@@ -31,7 +31,7 @@
       <section class="licbox">
         <div class="image-box">
           <div class="lic-image-container">
-            <img src="/assets/b2.jpeg" alt="Description of image">
+            <img src="/assets/certify.png" alt="Description of image">
           </div>
         </div>
       </section>
