--- a/public/styles/whyus.css
+++ b/public/styles/whyus.css
@@ -1,12 +1,14 @@
 .whyus {
-  height: auto; /* Change this from 100vh to auto */
+  height: auto;
   display: flex;
   justify-content: flex-start;
   flex-direction: column;
 }
 
 .whyus-content {
-  width: 97%;
+  width: 98%;
+  min-height: 60vh; 
+  
 }
 
 .content-box {
@@ -15,8 +17,8 @@
   background-color: #F5F1F3;
   padding: 20px;
   box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.1);
-  height: auto; 
-  width: 97%;
+  min-height: 75vh; 
+  width: 98%;
 }
 
 .licbox {
@@ -27,12 +29,13 @@
   box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.1);
   height: auto; 
   width:20%;
-  margin-top: 20px;
+  margin: 50px; /* This adds space to the top, right, bottom, and left */
 }
+
 .content-box-container {
   display: flex;
   justify-content: space-between;
-  flex-wrap: wrap; /* Add this if you want the sections to wrap to the next line when the width is not enough */
+  flex-wrap: wrap;
 }
 
 .text-content, .image-box {
@@ -57,7 +60,7 @@ p {
 
 .image-container {
   background-color: white;
-  padding: 20px;
+  padding: 60px;
 }
 
 .lic-image-container {
