making remodels tab

--- a/public/components/header.html
+++ b/public/components/header.html
@@ -4,9 +4,8 @@
         <img src="/assets/logo.webp" alt="Logo">
       </div>
       <nav class="nav">
-        <a href="#home">PROJECTS</a>
-        <a href="#about">REMODELS</a>
-        <a href="#projects">ABOUT</a>
+        <a href="#remodels">REMODELS</a>
+        <a href="#about">ABOUT</a>
         <button class="quote-button">CONTACT</button>
       </nav>
     </header>
