--- a/public/components/about.html
+++ b/public/components/about.html
@@ -1,13 +1,19 @@
 <template id="about-template">
     <section class="about" id="about">
       <div class="about-content">
-        <h2>ABOUT US</h2>
-        <h3>JCS Homes LLC</h3>
-        <h4>PICKING THE RIGHT BUILDER</h4>
-        <p>JCS Homes is family-owned and operated custom home remodeling company located in Northern Virginia. We have been serving the DMV community for over 20 years, and we are committed high quality remodels that meet the wants and desires of our clients.</p>
-        <p>At JCS, we take care of all your home improvement needs. Drywall, Painting, Flooring, and more. We take your ideas and make them our next project.</p>
-        <p>Our team of professionals are here to help you with your next project. We are dedicated to providing you with the best service and quality work.</p>
-        <button class="quote-button">Test</button>
+        <div class="content-box">
+          <div class="image-box">
+            <div class="image-container">
+              <img src="/assets/b1.jpeg" alt="Description of image">
+            </div>
+          </div>
+          <div class="text-content">
+            <h3>Who Are We?</h3>
+            <p>JCS Homes is family-owned and operated custom home remodeling company located in Northern Virginia. We have been serving the DMV community for over 20 years, and we are committed high quality remodels that meet the wants and desires of our clients.</p>
+            <p>At JCS, we take care of all your home improvement needs. Drywall, Painting, Flooring, and more. We take your ideas and make them our next project.</p>
+            <p>Our team of professionals are here to help you with your next project. We are dedicated to providing you with the best service and quality work.</p>
+          </div>
+        </div>
       </div>
     </section>
   </template>
