added pic for about section

--- a/public/components/about.html
+++ b/public/components/about.html
@@ -4,7 +4,7 @@
         <div class="content-box">
           <div class="image-box">
             <div class="image-container">
-              <img src="/assets/b1.jpeg" alt="Description of image">
+              <img src="/assets/lobos.jpg" alt="Description of image">
             </div>
           </div>
           <div class="text-content">
