--- a/public/components/hero.html
+++ b/public/components/hero.html
@@ -10,7 +10,7 @@
         <div class="pitch-content">
           <h1 class="pitch-text">Turn your house into your dream home</h1>
           <div class="line"></div>
-          <p class="pitch-paragraph">JCS Homes is family-owned and operated custom home remodeling company located in Northern Virginia. We have been serving the DMV community for over 20 years, and we are committed to designing high quality homes that meet the wants and desires of our clients.</p>
+          <p class="pitch-paragraph">Experience exceptional remodeling services with JCS Homes LLC. Our expert team is dedicated to exceeding your expectations and bringing your vision to life. Trust us to be your partner in creating the perfect project for your home, business, or community.</p>
         </div>
       </section>
   </template>
