--- a/public/components/whyus.html
+++ b/public/components/whyus.html
@@ -3,38 +3,116 @@
     <div class="whyus-content">
       <div class="content-box">
         <div class="text-content">
-          <h2>Why remodel with JCS?</h2>
-          <p>the most important aspect of a job is vision. we take the time out to understand your needs and wants. we keep you looped in on the project and we are transparent with all job related scheduling and expenses.</p>
+          <h2>OUR SERVICES</h2>
         </div>
-        <div class="image-box">
-          <div class="image-container">
-            <img src="/assets/b1.jpeg" alt="Description of image">
+        <div class="service-list">
+          <div class="service-item">
+            <div class="image-container">
+              <img src="/assets/paint.webp" alt="Paint">
+            </div>
+            <div class="service-text">
+              <h3>Paint</h3>
+              <p>Brief description about paint services.</p>
+            </div>
+          </div>
+          <div class="service-item">
+            <div class="image-container">
+              <img src="/assets/drywall.webp" alt="Drywall">
+            </div>
+            <div class="service-text">
+              <h3>Drywall</h3>
+              <p>Brief description about drywall services.</p>
+            </div>
+          </div>
+          <div class="service-item">
+            <div class="image-container">
+              <img src="/assets/windows.webp" alt="Windows">
+            </div>
+            <div class="service-text">
+              <h3>Windows</h3>
+              <p>Brief description about window services.</p>
+            </div>
+          </div>
+          <div class="service-item">
+            <div class="image-container">
+              <img src="/assets/tiling.webp" alt="Tiling">
+            </div>
+            <div class="service-text">
+              <h3>Tiling</h3>
+              <p>Brief description about tiling services.</p>
+            </div>
+          </div>
+          <div class="service-item">
+            <div class="image-container">
+              <img src="/assets/bathroom.webp" alt="Bathroom">
+            </div>
+            <div class="service-text">
+              <h3>Bathroom</h3>
+              <p>Brief description about bathroom services.</p>
+            </div>
+          </div>
+          <div class="service-item">
+            <div class="image-container">
+              <img src="/assets/deck.webp" alt="Deck">
+            </div>
+            <div class="service-text">
+              <h3>Deck</h3>
+              <p>Brief description about deck services.</p>
+            </div>
+          </div>
+          <div class="service-item">
+            <div class="image-container">
+              <img src="/assets/basement.webp" alt="Basement">
+            </div>
+            <div class="service-text">
+              <h3>Basement</h3>
+              <p>Brief description about basement services.</p>
+            </div>
+          </div>
+          <div class="service-item">
+            <div class="image-container">
+              <img src="/assets/kitchen.webp" alt="Kitchen">
+            </div>
+            <div class="service-text">
+              <h3>Kitchen</h3>
+              <p>Brief description about kitchen services.</p>
+            </div>
+          </div>
+          <div class="service-item">
+            <div class="image-container">
+              <img src="/assets/wash.webp" alt="Wash">
+            </div>
+            <div class="service-text">
+              <h3>Power Wash</h3>
+              <p>Brief description about power wash services.</p>
+            </div>
           </div>
         </div>
       </div>
-    </div>
-    <div class="content-box-container">
-      <section class="licbox">
-        <div class="image-box">
-          <div class="lic-image-container">
-            <img src="/assets/ntca.png" alt="Description of image">
+      
+      <!-- <div class="content-box-container">
+        <section class="licbox">
+          <div class="image-box">
+            <div class="lic-image-container">
+              <img src="/assets/ntca.png" alt="Description of image">
+            </div>
           </div>
-        </div>
-      </section>
-      <section class="licbox">
-        <div class="image-box">
-          <div class="lic-image-container">
-            <img src="/assets/leadsafe.png" alt="Description of image">
+        </section>
+        <section class="licbox">
+          <div class="image-box">
+            <div class="lic-image-container">
+              <img src="/assets/epa.webp" alt="Description of image">
+            </div>
           </div>
-        </div>
-      </section>
-      <section class="licbox">
-        <div class="image-box">
-          <div class="lic-image-container">
-            <img src="/assets/certify.png" alt="Description of image">
+        </section>
+        <section class="licbox">
+          <div class="image-box">
+            <div class="lic-image-container">
+              <img src="/assets/certify.png" alt="Description of image">
+            </div>
           </div>
-        </div>
-      </section>
+        </section>
+      </div> -->
     </div>
   </section>
 </template>
