--- a/public/styles/remodels.css
+++ b/public/styles/remodels.css
@@ -4,6 +4,17 @@
     justify-content: space-between;
 }
 
+#remodels {
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+#remodels h1 {
+    text-align: center;
+    font-size: 2.5em;
+    margin-bottom: 20px;
+}
+
 .remodel-item {
     flex: 0 0 23%;
     margin: 1%;
