--- a/public/styles/whyus.css
+++ b/public/styles/whyus.css
@@ -7,29 +7,82 @@
 
 .whyus-content {
   width: 98%;
-  min-height: 60vh; 
-  
+  min-height: 60vh;
 }
 
 .content-box {
   display: flex;
-  justify-content: space-between;
-  background-color: #F5F1F3;
   padding: 20px;
-  box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.1);
-  min-height: 75vh; 
-  width: 98%;
+}
+
+.text-content {
+  flex: 1;
+  padding-right: 20px;
+  background-color: #781C45;
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.text-content h2 {
+  font-size: 36px;
+  margin-bottom: 20px;
+}
+
+.service-list {
+  flex: 3;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+}
+
+.service-item {
+  display: flex;
+  width: calc(33.333% - 20px);
+  align-items: center;
+  gap: 10px;
+  box-sizing: border-box;
+  padding: 10px;
+}
+
+.image-container {
+  flex: 0 0 auto;
+  width: 60px;
+  height: 60px;
+}
+
+.image-container img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 5px;
+}
+
+.service-text {
+  flex: 1;
+}
+
+.service-text h3 {
+  font-size: 18px;
+  margin: 0;
+}
+
+.service-text p {
+  font-size: 14px;
+  margin: 5px 0 0;
 }
 
 .licbox {
   display: flex;
   justify-content: space-between;
-  background-color: #F5F1F3;
+  background-color: #781C45;
   padding: 20px;
   box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.1);
-  height: auto; 
-  width:20%;
-  margin: 50px; /* This adds space to the top, right, bottom, and left */
+  height: auto;
+  width: 20%;
+  margin: 50px;
+  border-radius: 10px;
 }
 
 .content-box-container {
@@ -42,8 +95,8 @@
   flex: 1;
 }
 
-.text-content, h2 {
-  color: #333;
+.text-content h2 {
+  color: #fff;
   font-size: 1.9em;
 }
 
