--- a/public/components/footer.html
+++ b/public/components/footer.html
@@ -1,27 +1,32 @@
 <template id="footer-template">
-    <section class="footer" id="footer1">
+    <section class="footer" id="footer">
         <div class="footer-container">
             <div class="footer-logo">
-                <img src="assets/logo.webp" alt="Logo">
+                <img src="assets/logo.webp" alt="Company Logo">
             </div>
-            <div class="footer-info">
-                <h4>Company Info</h4>
-                <p>About Us</p>
-                <p>Contact</p>
-                <p>Careers</p>
+            <div class="footer-content">
+                <div class="footer-info">
+                    <h4>Company Info</h4>
+                    <p>About Us</p>
+                    <p>Contact</p>
+                    <p>Careers</p>
+                </div>
+                <div class="footer-links">
+                    <h4>Quick Links</h4>
+                    <p>Home</p>
+                    <p>Services</p>
+                    <p>Products</p>
+                </div>
+                <div class="footer-social">
+                    <h4>Social Media</h4>
+                    <a href="#">Facebook</a>
+                    <a href="#">Twitter</a>
+                    <a href="#">Instagram</a>
+                </div>
             </div>
-            <div class="footer-links">
-                <h4>Quick Links</h4>
-                <p>Home</p>
-                <p>Services</p>
-                <p>Products</p>
-            </div>
-            <div class="footer-social">
-                <h4>Social Media</h4>
-                <a href="#">Facebook</a>
-                <a href="#">Twitter</a>
-                <a href="#">Instagram</a>
-            </div>
+        </div>
+        <div class="footer-bottom">
+            <p>&copy; 2024 Company Name. All rights reserved.</p>
         </div>
     </section>
 </template>
