--- a/public/components/footer.html
+++ b/public/components/footer.html
@@ -6,10 +6,10 @@
             </div>
             <div class="footer-content">
                 <div class="footer-info">
-                    <h4>Company Info</h4>
-                    <p>About Us</p>
-                    <p>Contact</p>
-                    <p>Careers</p>
+                    <h4>JCS Homes LLC</h4>
+                    <p>Email: owner@jcshomesllc.com</p>
+                    <p>Phone: (703) 687-5788</p>
+                    <p>Address: 1234 Main St. Fairfax, VA 22030</p>
                 </div>
                 <div class="footer-links">
                     <h4>Quick Links</h4>
@@ -20,13 +20,13 @@
                 <div class="footer-social">
                     <h4>Social Media</h4>
                     <a href="#">Facebook</a>
-                    <a href="#">Twitter</a>
                     <a href="#">Instagram</a>
+                    <a href="#">Google</a>
                 </div>
             </div>
         </div>
         <div class="footer-bottom">
-            <p>&copy; 2024 Company Name. All rights reserved.</p>
+            <p>&copy; 2024 JCS Homes LLC. All rights reserved.</p>
         </div>
     </section>
 </template>
