made adjustments to the remodels section

--- a/public/styles/hero.css
+++ b/public/styles/hero.css
@@ -14,11 +14,11 @@
 
 .hero .quote-button {
   background-color: transparent;
-  color: black;
-  border: 2px solid black;
+  color: white;
+  border: 2px solid white;
   cursor: pointer;
   border-radius: 0;
-  padding: 0.5em 1em;
+  padding: 3em 1em;
   margin: 45px;
 }
 
